--- a/ECommerce/ECommerce/Views/Products/Index.cshtml
+++ b/ECommerce/ECommerce/Views/Products/Index.cshtml
@@ -1,15 +1,16 @@
-﻿<!DOCTYPE html>
- <html>
-    <head>
-        <title>Ecommerce</title>
-    </head>
-    <body>
-        <header>
-            <h1>This Page Also Exists</h1>
-        </header>
-        <main>
-            
-        </main>
-    </body>
- </html>
+﻿@model ECommerce.Models.Products
 
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Ecommerce</title>
+</head>
+<body>
+    <header>
+        <h1>This Page Also Exists</h1>
+        <p>@Model.Name</p>
+    </header>
+    <main>
+    </main>
+</body>
+</html>
