--- a/ECommerce/ECommerce/Views/Products/Index.cshtml
+++ b/ECommerce/ECommerce/Views/Products/Index.cshtml
@@ -13,25 +13,44 @@
 </head>
 <body>
     <header>
-        <a href="Home">Home</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">LOGO</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="Home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#">Products</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </header>
 
     <main>
 
-        <table class="table">
+        <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>Name</th>
-                    <th>Calories</th>
-                    <th>Protein</th>
-                    <th>Fat</th>
-                    <th>Carbohydrates</th>
+                    <th scope="col"></th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Calories</th>
+                    <th scope="col">Protein</th>
+                    <th scope="col">Fat</th>
+                    <th scope="col">Carbohydrates</th>
+                    <th scope="col"></th>
                 </tr>
             </thead>
             <tbody>
+                @{int count = 1; }
                 @foreach (var item in Model)
                 {
                     <tr>
+                        <td scope="row">@count</td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Name);
                         </td>
@@ -51,6 +70,7 @@
                             <a asp-action="Delete" asp-route-id="@item.Name">Delete</a>
                         </td>
                     </tr>
+                    count++;
                 }
             </tbody>
         </table>
