--- a/ECommerce/ECommerce/Views/Products/Index.cshtml
+++ b/ECommerce/ECommerce/Views/Products/Index.cshtml
@@ -2,13 +2,12 @@
 
 @{
     ViewData["Title"] = "Index";
-    @*Layout = "_Layout";*@
+    Layout = "_Layout";
 }
 
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <title>Ecommerce</title>
 </head>
 <body>
