--- a/ECommerce/ECommerce/Views/Products/Index.cshtml
+++ b/ECommerce/ECommerce/Views/Products/Index.cshtml
@@ -8,6 +8,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="/Styles/StyleSheet.css" rel="stylesheet" type="text/css" />
     <title>Ecommerce</title>
 </head>
 <body>
