--- a/ECommerce/ECommerce/Views/Products/Index.cshtml
+++ b/ECommerce/ECommerce/Views/Products/Index.cshtml
@@ -75,7 +75,7 @@
                             @Html.DisplayFor(modelItem => item.Carbo);
                         </td>
                         <td>
-                            <a asp-action="Delete" asp-route-id="@item.Name">Delete</a>
+                            <a asp-action="Details" asp-route-id="@item.Name">Details</a>
                         </td>
                     </tr>
                     count++;
