--- a/ECommerce/ECommerce/Views/Products/Details.cshtml
+++ b/ECommerce/ECommerce/Views/Products/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ECommerce.Models.Products
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
     Layout = "_Layout";
 }
 
@@ -13,6 +13,5 @@
 <body>
     <h1>TEST</h1>
     <h1>@Model.Name</h1>
-    <h1>@Model.Protein</h1>
 </body>
 </html>
