--- a/ECommerce/ECommerce/Views/Home/Index.cshtml
+++ b/ECommerce/ECommerce/Views/Home/Index.cshtml
@@ -24,6 +24,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="Products">Products</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Account/Register">Sign up</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Account/Login">Login</a>
+                    </li>
                 </ul>
             </div>
         </nav>
