--- a/ECommerce/ECommerce/Pages/Account/Login.cshtml
+++ b/ECommerce/ECommerce/Pages/Account/Login.cshtml
@@ -2,7 +2,18 @@
 @model ECommerce.Pages.Account.Login.LoginModel
 @{
     ViewData["Title"] = "Login";
+    Layout = "_Layout";
 }
 
 <h1>Login</h1>
-
+<form method="post">
+    <div class="form-group">
+        <label asp-for="@Model.Input.Email">Email Address</label>
+        <input class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" asp-for="@Model.Input.Email" />
+    </div>
+    <div class="form-group">
+        <label asp-for="@Model.Input.Password">Password</label>
+        <input class="form-control" id="exampleInputPassword1" aria-describedby="passwordHelp" placeholder="Enter password" asp-for="@Model.Input.Password" />
+    </div>
+    <button type="submit" class="btn btn-primary">SUBMIT</button>
+</form>
