--- a/ECommerce/ECommerce/Views/Products/Index.cshtml
+++ b/ECommerce/ECommerce/Views/Products/Index.cshtml
@@ -50,10 +50,7 @@
                 <tr>
                     <th scope="col"></th>
                     <th scope="col">Name</th>
-                    <th scope="col">Calories</th>
-                    <th scope="col">Protein</th>
-                    <th scope="col">Fat</th>
-                    <th scope="col">Carbohydrates</th>
+                    <th scope="col">Price</th>
                     <th scope="col"></th>
                 </tr>
             </thead>
@@ -67,16 +64,7 @@
                             @Html.DisplayFor(modelItem => item.Name);
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Calories);
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Protein);
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Fat);
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Carbo);
+                            @Html.DisplayFor(modelItem => item.Price);
                         </td>
                         <td>
                             <a asp-action="Details" asp-route-id="@item.Name">Details</a>
