--- a/ECommerce/ECommerce/Pages/Account/Register.cshtml
+++ b/ECommerce/ECommerce/Pages/Account/Register.cshtml
@@ -9,7 +9,7 @@
 
 <form method="post">
     <div class="form-group">
-        <div asp-validation-summary="All"></div>
+        <div asp-validation-summary="All" style="color: red"></div>
         <label asp-for="@Model.Input.FirstName">First Name</label>
         <input class="form-control" id="exampleInputFirstName1" aria-describedby="firstNameHelp" placeholder="Enter firstname" asp-for="@Model.Input.FirstName" />
         <span asp-validation-for="@Model.Input.FirstName"></span>
