--- a/ECommerce/ECommerce/wwwroot/Styles/Home.css
+++ b/ECommerce/ECommerce/wwwroot/Styles/Home.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background-image: url("../Images/home.jpg");
+    background-image: url("../Images/cpu2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
