Add shared header.

--- a/ECommerce/ECommerce/Views/Home/Index.cshtml
+++ b/ECommerce/ECommerce/Views/Home/Index.cshtml
@@ -1,16 +1,17 @@
 ﻿@{
     ViewData["Title"] = "Index";
     Layout = "_Layout";
+    Layout = "_header";
 }
 
 <!DOCTYPE html>
 <html>
 <head>
     <title>Ecommerce</title>
-    <link rel="stylesheet" type="text/css" href="~/Styles/Home.css" />
+    <link rel="stylesheet" type="text/css" href="~/Styles/StyleSheet.css" />
 </head>
-<body>
-    <header>
+<!--<body>-->
+@*<header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">LOGO</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,8 +34,8 @@
                 </ul>
             </div>
         </nav>
-    </header>
-    <main>
+    </header>*@
+<!--<main>
     </main>
-</body>
+</body>-->
 </html>
