--- a/ECommerce/ECommerce/Pages/Account/Register.cshtml
+++ b/ECommerce/ECommerce/Pages/Account/Register.cshtml
@@ -3,13 +3,14 @@
 @{
     ViewData["Title"] = "Register";
     Layout = "_Layout";
+    Layout = "_header";
 }
 
 <h1>Register</h1>
 
 <form method="post">
     <div class="form-group">
-        <div asp-validation-summary="All" style="color: red"></div>
+        <div asp-validation-summary="All" class="error-message"></div>
         <label asp-for="@Model.Input.FirstName">First Name</label>
         <input class="form-control" id="exampleInputFirstName1" aria-describedby="firstNameHelp" placeholder="Enter firstname" asp-for="@Model.Input.FirstName" />
         <span asp-validation-for="@Model.Input.FirstName"></span>
@@ -30,5 +31,5 @@
         <label asp-for="@Model.Input.ConfirmPassword">Confirm Password</label>
         <input class="form-control" id="exampleInputPassword1" aria-describedby="passwordHelp" placeholder="Confirm password" asp-for="@Model.Input.ConfirmPassword" />
     </div>
-    <button type="submit" class="btn btn-primary">SUBMIT</button>
+    <button type="submit" class="btn btn-primary">Sign up</button>
 </form>
