--- a/ECommerce/ECommerce/Views/Products/Index.cshtml
+++ b/ECommerce/ECommerce/Views/Products/Index.cshtml
@@ -3,45 +3,44 @@
 @{
     ViewData["Title"] = "Index";
     Layout = "_Layout";
+    Layout = "_header";
 }
 
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="/Styles/StyleSheet.css" rel="stylesheet" type="text/css" />
     <title>Ecommerce</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">LOGO</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="Home">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Products</a>
-                    </li>
-                </ul>
-                @*TODO: fix scaling issues*@
-                <div id="search-box">
-                    <form method="post">
-                        <input type="text" asp-for="@Model.Term" />
-                        <button id="search-button" type="submit">
-                            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z" />
-                                <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
-                            </svg>
-                        </button>
-                    </form>
+    @*<header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#">LOGO</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="Home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#">Products</a>
+                        </li>
+                    </ul>
+                    <div id="search-box">
+                        <form method="post">
+                            <input type="text" asp-for="@Model.Term" />
+                            <button id="search-button" type="submit">
+                                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z" />
+                                    <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
+                                </svg>
+                            </button>
+                        </form>
+                    </div>
                 </div>
-            </div>
-        </nav>
-    </header>
+            </nav>
+        </header>*@
 
     <main>
 
@@ -58,18 +57,18 @@
                 @{int count = 1; }
                 @foreach (var item in Model.Products)
                 {
-                    <tr>
-                        <td scope="row">@count</td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Name);
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Price);
-                        </td>
-                        <td>
-                            <a asp-action="Details" asp-route-id="@item.Name">Details</a>
-                        </td>
-                    </tr>
+                <tr>
+                    <td scope="row">@count</td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name);
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Price);
+                    </td>
+                    <td>
+                        <a asp-action="Details" asp-route-id="@item.Name">Details</a>
+                    </td>
+                </tr>
                     count++;
                 }
             </tbody>
