--- a/ECommerce/ECommerce/Views/Home/Index.cshtml
+++ b/ECommerce/ECommerce/Views/Home/Index.cshtml
@@ -10,32 +10,6 @@
     <title>Ecommerce</title>
     <link rel="stylesheet" type="text/css" href="~/Styles/StyleSheet.css" />
 </head>
-<!--<body>-->
-@*<header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">LOGO</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Products">Products</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Account/Register">Sign up</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Account/Login">Login</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>*@
-<!--<main>
-    </main>
-</body>-->
+<body>
+</body>
 </html>
