commit for user story 4

--- a/ECommerce/ECommerce/Pages/Dashboard/Product.cshtml
+++ b/ECommerce/ECommerce/Pages/Dashboard/Product.cshtml
@@ -2,6 +2,7 @@
 @model ECommerce.Pages.Dashboard.ProductModel
 @{
     ViewData["Title"] = "Product";
+    @*Layout = "_Layout";*@
 }
 
 <form method="post" enctype="multipart/form-data">
