Delete home and products views.

--- a/ECommerce/ECommerce/Pages/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/Index.cshtml
@@ -1,5 +1,8 @@
-﻿@{
-    ViewData["Title"] = "Index";
+﻿@page
+@*@model ECommerce.Pages.Home.HomeModel*@
+@model ECommerce.Models.ViewModels.ProductsVM
+@{
+    ViewData["Title"] = "Home";
     Layout = "_Layout";
 }
 
