--- a/ECommerce/ECommerce/Pages/Dashboard/Product.cshtml
+++ b/ECommerce/ECommerce/Pages/Dashboard/Product.cshtml
@@ -1,10 +1,15 @@
 ﻿@page
+@*@model ECommerce.Models.ViewModels.ProductsVM*@
 @model ECommerce.Pages.Dashboard.ProductModel
 @{
     ViewData["Title"] = "Product";
-    @*Layout = "_Layout";*@
+    Layout = "_Layout";
 }
 
 <form method="post" enctype="multipart/form-data">
-    <input type="file" />
+    <label asp-for="@Model.Name"></label>
+    <input asp-for="@Model.Name" />
+
+    <label asp-for="@Model.Image"></label>
+    <input type="file" asp-for="@Model.Image" />
 </form>
