--- a/ECommerce/ECommerce/Views/Shared/_Layout.cshtml
+++ b/ECommerce/ECommerce/Views/Shared/_Layout.cshtml
@@ -21,16 +21,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="Home">Home</a>
+                        <a class="nav-link" asp-page="/Index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Products">Products</a>
+                        <a class="nav-link" asp-page="/Products/Index">Products</a>
                     </li>
                 </ul>
                 <div id="search-box">
                     <form method="post">
                         <input type="text" asp-for="@Model.Term" />
-                        <button asp-action="Index" asp-controller="Products" id="search-button" type="submit">
+                        <button asp-page="/Products/Index" id="search-button" type="submit">
                             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z" />
                                 <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
