--- a/ECommerce/ECommerce/Views/Shared/_Layout.cshtml
+++ b/ECommerce/ECommerce/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
     <div>
         @RenderBody()
     </div>
-    <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+    <footer id="sticky-footer" class="py-4 bg-dark text-white-50" style="position: fixed; bottom: 0; width: 100%;">
         <div class="container text-center">
             <a asp-page="/dashboard/product">Admin Dashboard</a>
         </div>
