--- a/ECommerce/ECommerce/Views/Shared/_Layout.cshtml
+++ b/ECommerce/ECommerce/Views/Shared/_Layout.cshtml
@@ -42,7 +42,10 @@
             <div class="register bg-light">
                 @if (SignInManager.IsSignedIn(User))
                 {
-                    <span id="welcome-user">Welcome @User.Claims.First(x => x.Type == "Fullname").Value </span>
+                    if (User.Claims.FirstOrDefault(x => x.Type == "Fullname") != null)
+                    {
+                        <span id="welcome-user">Welcome @User.Claims.First(x => x.Type == "Fullname").Value </span>
+                    }
                     <form asp-page="/Account/Logout" method="post">
                         <button id="logout-button" class="nav-link" type="submit">Logout</button>
                     </form>
