--- a/ECommerce/ECommerce/Pages/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/Index.cshtml
@@ -10,7 +10,7 @@
 <html>
 <head>
     <title>Ecommerce</title>
-    <link rel="stylesheet" type="text/css" href="~/Styles/StyleSheet.css" />
+    <link rel="stylesheet" type="text/css" href="~/Styles/Home.css" />
 </head>
 <body>
 </body>
