--- a/ECommerce/ECommerce/Views/Shared/_Layout.cshtml
+++ b/ECommerce/ECommerce/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                 else
                 {
                     <a asp-page="/Account/Login">Login</a>
-                    <a asp-page="/Account/Register">Register</a>
+                    <a asp-page="/Account/Register">Sign Up</a>
                 }
             </div>
         </nav>
@@ -64,7 +64,7 @@
     </div>
     <footer id="sticky-footer" class="py-4 bg-dark text-white-50" style="position: fixed; bottom: 0; width: 100%;">
         <div class="container text-center">
-            <a asp-page="/dashboard/product">Admin Dashboard</a>
+            <a asp-page="/dashboard/product" class="btn btn-secondary btn-sm text-left" role="button" aria-disabled="true">Admin Dashboard</a>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
