--- a/ECommerce/ECommerce/Pages/Account/Login.cshtml
+++ b/ECommerce/ECommerce/Pages/Account/Login.cshtml
@@ -5,16 +5,31 @@
     Layout = "_Layout";
 }
 
-<h1>Login</h1>
-<form method="post">
-    <div asp-validation-summary="All" class="error-message"></div>
-    <div class="form-group">
-        <label asp-for="@Model.Input.Email">Email Address</label>
-        <input class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" asp-for="@Model.Input.Email" />
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        .login {
+            margin: 0px auto;
+        }
+    </style>
+</head>
+<body>
+    <div class="row">
+        <div class="col-md-4 d-flex justify-content-center login">
+            <form method="post">
+                <div class="form-group">
+                    <div asp-validation-summary="All" class="error-message"></div>
+                    <label asp-for="@Model.Input.Email">Email Address</label>
+                    <input class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" asp-for="@Model.Input.Email" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="@Model.Input.Password">Password</label>
+                    <input class="form-control" id="exampleInputPassword1" aria-describedby="passwordHelp" placeholder="Enter password" asp-for="@Model.Input.Password" />
+                </div>
+                <button type="submit" class="btn btn-primary">Login</button>
+            </form>
+        </div>
     </div>
-    <div class="form-group">
-        <label asp-for="@Model.Input.Password">Password</label>
-        <input class="form-control" id="exampleInputPassword1" aria-describedby="passwordHelp" placeholder="Enter password" asp-for="@Model.Input.Password" />
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-</form>
+</body>
+</html>
