Fix issue with pics not uploading to container.

--- a/ECommerce/ECommerce/Pages/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿@page
-@*@model ECommerce.Pages.Home.HomeModel*@
 @model ECommerce.Models.ViewModels.ProductsVM
 @{
     ViewData["Title"] = "Home";
@@ -9,7 +8,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Ecommerce</title>
+    <title>Home</title>
     <link rel="stylesheet" type="text/css" href="~/Styles/Home.css" />
 </head>
 <body>
