--- a/ECommerce/ECommerce/Pages/Products/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/Products/Index.cshtml
@@ -8,10 +8,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Ecommerce</title>
+    <style>
+        main {
+            margin-bottom: 150px;
+        }
+    </style>
+    <title>Products</title>
 </head>
 <body>
-    <main>
+    <main id="products-main">
 
         <table class="table table-striped">
             <thead>
