--- a/ECommerce/ECommerce/Pages/Dashboard/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/Dashboard/Index.cshtml
@@ -19,11 +19,9 @@
         <div class="col-md-4 d-flex justify-content-center upload-form">
             <form method="post" enctype="multipart/form-data">
                 <div class="form-group">
-                    <label asp-for="@Model.Name"></label>
-                    <input class="form-control" asp-for="@Model.Name" />
+                    <input class="form-control" asp-for="@Model.Name" placeholder="Image Name" />
                 </div>
                 <div class="form-group">
-                    <label asp-for="@Model.Image"></label>
                     <input class="form-control" type="file" asp-for="@Model.Image" />
                     <button type="submit" class="btn btn-primary btn-sm text-left">Upload Image</button>
                 </div>
