--- a/ECommerce/ECommerce/Pages/Products/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/Products/Index.cshtml
@@ -40,7 +40,7 @@
                             @string.Format("{0:C}", item.Price)
                         </td>
                         <td>
-                            <a asp-action="Details" asp-route-id="@item.Name">Details</a>
+                            <img width="200" height="150" src=@item.Image />
                         </td>
                     </tr>
                     count++;
