--- a/ECommerce/ECommerce/wwwroot/Styles/Home.css
+++ b/ECommerce/ECommerce/wwwroot/Styles/Home.css
@@ -1,7 +1,7 @@
-﻿body {
+﻿/*body {
     background-image: url("../Images/cpu2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     background-position: 20%;
-}
+}*/
