Add cart items.

--- a/ECommerce/ECommerce/Pages/ShoppingCart/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/ShoppingCart/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@page
-@model ECommerce.Pages.Cart.UserCartModel
+@model ECommerce.Pages.ShoppingCart.IndexModel
+
 @{
-    ViewData["Title"] = "UserCart";
+    ViewData["Title"] = "Index";
     Layout = "_Layout";
 }
 
@@ -58,4 +59,3 @@
     </main>
 </body>
 </html>
-
