Update cart repo and interface.

--- a/ECommerce/ECommerce/Pages/ShoppingCart/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/ShoppingCart/Index.cshtml
@@ -32,27 +32,27 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>
-                        @Model.Product.Name
-                    </td>
-                    <td>
-                        @string.Format("{0:C}", Model.Product.Price)
-                    </td>
-                    <td>
-                        <img width="200" height="150" src=@Model.Product.Image />
-                    </td>
-                    <td>
-                        @Model.Product.Description
-                    </td>
-                    <td>
-                        @Model.Product.Stock
-                    </td>
-                    <td>
-                        @Model.Product.Recommendation
-                    </td>
-                    <td>
-                        <a asp-page="AddToCart" asp-route-id="@Model.Product.Id">Add to Cart</a>
-                    </td>
+                    @*<td>
+                            @Model.
+                        </td>
+                        <td>
+                            @string.Format("{0:C}", Model.Product.Price)
+                        </td>
+                        <td>
+                            <img width="200" height="150" src=@Model.Product.Image />
+                        </td>
+                        <td>
+                            @Model.Product.Description
+                        </td>
+                        <td>
+                            @Model.Product.Stock
+                        </td>
+                        <td>
+                            @Model.Product.Recommendation
+                        </td>
+                        <td>
+                            <a asp-page="AddToCart" asp-route-id="@Model.Product.Id">Add to Cart</a>
+                        </td>*@
                 </tr>
             </tbody>
         </table>
