--- a/ECommerce/ECommerce/Pages/Products/ProductDetails.cshtml
+++ b/ECommerce/ECommerce/Pages/Products/ProductDetails.cshtml
@@ -51,7 +51,7 @@
                 </tr>
             </tbody>
         </table>
-        <form asp-page="/Account/UserCart" method="post">
+        <form asp-page="/ShoppingCart/Index" method="post">
             <button type="submit">Add To Cart</button>
         </form>
     </main>
