--- a/ECommerce/ECommerce/Views/Shared/_Layout.cshtml
+++ b/ECommerce/ECommerce/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                     <li class="nav-item">
                         <a class="nav-link" asp-page="/Products/Index">Products</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-page="/ShoppingCart/Index">My Cart</a>
+                    </li>
                 </ul>
                 <div id="search-box">
                     <form method="post">
