--- a/ECommerce/ECommerce/Pages/ShoppingCart/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/ShoppingCart/Index.cshtml
@@ -21,29 +21,25 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>
-                        Name
-                    </th>
-                    <th>
-                        Quantity
-                    </th>
-                    <th>
-                        Total
-                    </th>
+                    <th>Name</th>
+                    <th>Price</th>
+                    <th>Quantity</th>
+                    <th>Total</th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
                 @if (Model.Cart.CartItem != null)
                 {
+                    decimal total = 0.0M;
                     @foreach (var item in Model.Cart.CartItem)
                     {
+                        total += item.Product.Price * item.Quantity;
                         <tr>
-                            <td>
-                                @item.Product.Name
-                            </td>
-                            <td>
-                                @item.Quantity
-                            </td>
+                            <td>@item.Product.Name</td>
+                            <td>@string.Format("{0:C}", item.Product.Price)</td>
+                            <td>@item.Quantity</td>
+                            <td>@string.Format("{0:C}", total)</td>
                             <td>
                                 <form method="post">
                                     <input hidden asp-for="CartId" value="@item.CartId" />
