--- a/ECommerce/ECommerce/Pages/ShoppingCart/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/ShoppingCart/Index.cshtml
@@ -21,11 +21,11 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>Name</th>
-                    <th>Price</th>
-                    <th>Quantity</th>
-                    <th>Total</th>
-                    <th></th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Total</th>
+                    <th scope="col"></th>
                 </tr>
             </thead>
             <tbody>
