--- a/ECommerce/ECommerce/wwwroot/Styles/All.css
+++ b/ECommerce/ECommerce/wwwroot/Styles/All.css
@@ -15,3 +15,13 @@
     display: inline-flex;
     margin: 2px;
 }
+
+#bootstrap-override button {
+    border: none;
+    background-color: inherit;
+}
+
+#bootstrap-override form {
+    border: none;
+    background-color: inherit;
+}
