--- a/ECommerce/ECommerce/Views/Shared/_Layout.cshtml
+++ b/ECommerce/ECommerce/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="~/Styles/All.css" />
 </head>
-<body>
+<body id="bootstrap-override">
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">PCActual</a>
@@ -52,7 +52,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <form asp-page="/Account/Logout" method="post">
-                                <button id="logout-button" class="nav-link" type="submit">Logout</button>
+                                <button type="submit">Logout</button>
                             </form>
                         </li>
                     </ul>
