--- a/ECommerce/ECommerce/Views/Shared/_Layout.cshtml
+++ b/ECommerce/ECommerce/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <form asp-page="/Account/Logout" method="post">
-                                <button type="submit">Logout</button>
+                                <button class="nav-link" type="submit">Logout</button>
                             </form>
                         </li>
                     </ul>
