Update icons on shopping cart page.

--- a/ECommerce/ECommerce/Views/Shared/_Layout.cshtml
+++ b/ECommerce/ECommerce/Views/Shared/_Layout.cshtml
@@ -13,8 +13,8 @@
 </head>
 <body id="bootstrap-override">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">PCActual</a>
+        <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#"><span id="logo-prefix">PC</span>Actual</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
