Add checkout page (no content).

--- a/ECommerce/ECommerce/Pages/ShoppingCart/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/ShoppingCart/Index.cshtml
@@ -25,7 +25,9 @@
                     <th scope="col">Price</th>
                     <th scope="col">Quantity</th>
                     <th scope="col">Total</th>
-                    <th scope="col"></th>
+                    <th scope="col">
+                        <a asp-page="/Checkout/Checkout">Checkout</a>
+                    </th>
                 </tr>
             </thead>
             <tbody>
